--- a/CSS/style-sheet-1.css
+++ b/CSS/style-sheet-1.css
@@ -60,6 +60,10 @@ body {
       text-decoration: none;
     }
 
+    body {
+      background-attachment: scroll; /
+    }
+
     h1 {
       font-size: 30px;
     }
