--- a/CSS/style-sheet-1.css
+++ b/CSS/style-sheet-1.css
@@ -51,7 +51,8 @@ body {
     }
 
     body {
-      background-attachment: scroll; /
+      background-attachment: fixed;
+      overflow-x: hidden; 
     }
 
     h1 {
