--- a/CSS/style-sheet-1.css
+++ b/CSS/style-sheet-1.css
@@ -56,12 +56,18 @@ body {
     }
 
     h1 {
-      font-size: 30px;
+      font-size: 50px;
+      font-family: Lexend;
+      color: white;
     }
+    
   
     h3 {
-      font-size: 15px;
+      font-size: 30px;
+      font-family: Lexend;
+      color: white;
     }
+    
 
     
     p {
@@ -71,7 +77,7 @@ body {
     }
     
     h4 {
-      font-size: 15px;
+      font-size: 30px;
       font-family: Lexend;
       color: white;
       margin-right: 50px; 
@@ -92,13 +98,13 @@ body {
     }
   
     .single-merill-image {
-      width: 50%;
+      width: 100%;
       height: auto;
       margin-bottom: 80%;
     }
 
     .single-starcatch-image {
-        width: 50%;
+        width: 100%;
         height: auto;
       }
 
@@ -123,7 +129,7 @@ body {
       }
       
     li {
-        font-size: 7px;
+        font-size: 15px;
         font-family: Lexend;
         color: white;
       }
@@ -131,7 +137,7 @@ body {
       .game_img {
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-        width: 5%;
+        width: 50%;
         height: auto;
         display: block;
     
