--- a/CSS/style-sheet-1.css
+++ b/CSS/style-sheet-1.css
@@ -30,7 +30,7 @@ body {
 
   @media (max-width: 400px) {
     a {
-      font-size: 30px;
+      font-size: 15px;
       font-family: Lexend;
       color: white;
       margin: 0;
@@ -50,7 +50,7 @@ body {
     
   
     h3 {
-      font-size: 30px;
+      font-size: 15px;
       font-family: Lexend;
       color: white;
     }
@@ -124,9 +124,9 @@ body {
       .game_img {
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-        width: 100%;
+        width: 50%;
         height: auto;
-        display: block;
+        display: flex;
     
         }
 
